# MandelbrotSetInCpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
